Ability to render contrib resource pack docs on main website (#3184)
* Sketch out contrib doc fetcher
* Read contrib config file
* Fetch contrib resource packs from git
* Copy in resource pack docs from contrib
* Task to cleanup copied-in files
* Attach contrib resource pack docs fetching to main website doc generation
* Refactor - rename vars in resource overview task for clarity
* Generate resource overview page using info from contrib
* Fix issue in which AWS and Azure resources were ending up under OS
* Trigger contrib doc cleanup after doc build
* Comment out the contrib.yaml for now
* Disable contrib tasks if git is not available
* Rubocop issues
* Allow .md as doc file ending
* Fix for files ending in md having a relative link
* Omit 'resources' from section labels to save width
* Rubocoooooooooooppppp

Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/www/Gemfile
+++ b/www/Gemfile
@@ -25,6 +25,9 @@ gem 'redcarpet'
 gem 'docker-api'
 gem 'github-markup'
 
+# Needed to fetch contrib resource packs, etc.
+gem 'git', '~> 1.4'
+
 # Build process requirements
 gem 'inquirer'
 gem 'inspec', path: '..'
