Convert legacy supports to their platform counterparts (#3333)
* Convert legacy supports to their platform counterparts.
* Fix rubocop lint.
* Update json schema for platform supports.

Signed-off-by: Jared Quick <jquick@chef.io>

--- a/test/unit/mock/profiles/skippy-profile-os/inspec.yml
+++ b/test/unit/mock/profiles/skippy-profile-os/inspec.yml
@@ -3,3 +3,4 @@ title: skip-like functionality
 version: 1.0.0
 supports:
 - os-family: definitely_not_supported
+- os-name: definitely_also_not_supported
