--- a/www/demo/package.json
+++ b/www/demo/package.json
@@ -21,9 +21,11 @@
     "angular2-in-memory-web-api": "0.0.15",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.0",
+    "https-proxy-agent": "2.2.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.27",
+    "url-parse": "1.4.3",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
     "xterm": "git://github.com/sourcelair/xterm.js.git#1.1.2",
@@ -46,7 +48,7 @@
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.7",
     "gulp-webpack": "^1.5.0",
-    "lite-server": "^2.2.0",
+    "lite-server": "^2.4.0",
     "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.2",
