--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -60,15 +60,18 @@ merge_actions:
       only_if:
         - built_in:bump_version
 
-artifact_actions:
-  promoted_to_unstable:
-    - built_in:build_docker_image
-  promoted_to_current:
-    - built_in:tag_docker_image
-  promoted_to_stable:
-    - bash:.expeditor/update_dockerfile.sh
-    - built_in:rollover_changelog
-    - built_in:publish_rubygems
-    - built_in:create_github_release
-    - built_in:tag_docker_image
-    - built_in:notify_chefio_slack_channels
+subscriptions:
+  - workload: artifact_published:unstable:inspec:*
+    actions:
+      - built_in:build_docker_image
+  - workload: artifact_published:current:inspec:*
+    actions:
+      - built_in:tag_docker_image
+  - workload: artifact_published:stable:inspec:*
+    actions:
+      - bash:.expeditor/update_dockerfile.sh
+      - built_in:rollover_changelog
+      - built_in:publish_rubygems
+      - built_in:create_github_release
+      - built_in:tag_docker_image
+      - built_in:notify_chefio_slack_channels
