--- a/test/unit/mock/profiles/complete-metadata/inspec.yml
+++ b/test/unit/mock/profiles/complete-metadata/inspec.yml
@@ -6,5 +6,6 @@ copyright: left
 summary: nothing
 license: Apache-2.0
 supports:
-  - linux
-  - darwin
+  - platform-family: linux
+  - platform-family: darwin
+  - platform-family: windows
