--- a/examples/inheritance/inspec.yml
+++ b/examples/inheritance/inspec.yml
@@ -7,7 +7,8 @@ license: Apache-2.0
 summary: Demonstrates the use of InSpec profile inheritance
 version: 1.0.0
 supports:
-  - os-family: unix
+  - platform-family: unix
+  - platform-family: windows
 depends:
   - name: profile
     path: ../profile
