CLI Plugin Manager SubCommand (#3414)
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,9 +5,9 @@ AllCops:
   - Gemfile
   - Rakefile
   - 'test/**/*'
+  - 'lib/plugins/*/test/**/*'
   - 'examples/**/*'
   - 'vendor/**/*'
-  - 'lib/plugins/inspec-*/test/**/*'
   - 'lib/bundles/inspec-init/templates/**/*'
   - 'www/demo/**/*'
 AlignParameters:
