--- a/.travis.yml
+++ b/.travis.yml
@@ -24,31 +24,31 @@ matrix:
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS=default-ubuntu-1204 DOCKER=true
+    env: SUITE=test:integration[default-ubuntu-1204]
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS='default-ubuntu-1604' DOCKER=true
+    env: SUITE=test:integration[default-ubuntu-1604]
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS='default-centos-68' DOCKER=true
+    env: SUITE=test:integration[default-centos-68]
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS='default-centos-7' DOCKER=true
+    env: SUITE=test:integration[default-centos-7]
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS='default-debian-8' DOCKER=true
+    env: SUITE=test:integration[default-debian-8]
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS='default-oracle-72' DOCKER=true
+    env: SUITE=test:integration[default-oracle-72]
   - rvm: 2.4.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration OS='default-fedora-24' DOCKER=true
+    env: SUITE=test:integration[default-fedora-24]
   - rvm: 2.4.3
     sudo: false
     cache:
