Add support for multiple descriptions for controls (#3424)
* Add support for multiple descriptions for controls

This adds the ability to specify multiple descriptions in controls.

Example:

```ruby
control 'my-control' do
  impact 1.0
  title 'My control'
  desc 'A default description'
  desc 'rational', 'I need an example'
  describe file('/tmp') do
    it { should be_directory }
  end
end
```

Many thanks to @jquick for helping me with the unit tests.
* Remove unused `descriptions` method
* Remove unused profile from test mocks
* Respond to feedback

Signed-off-by: Jerry Aldrich <jerryaldrichiii@gmail.com>

--- a/test/unit/mock/profiles/wrapper-override/inspec.yml
+++ b/test/unit/mock/profiles/wrapper-override/inspec.yml
@@ -8,4 +8,4 @@ summary: Profile that wraps other profiles
 version: 0.6.1
 depends:
   - name: myprofile1
-    url: https://s3-eu-west-1.amazonaws.com/apop-bucket/profiles/myprofile1-1.0.0.tar.gz
+    path: does_not_matter_check_vendor
