Plugins: Example CLI Plugin, a Resource Lister (#3421)
* Plugin example, CLI resource lister
* Move example plugin into a directory to look like a regular project
* Skeleton of testing for example plugin
* Example plugin unit tests work
* Functional tests added, using core helper
* Add a global method to determine InSpec install root
* Add linter support to the example
* Adjust inspec project rubocop to run linter on example plugins
* Linter autocorrections
* Update readme

Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,7 +6,13 @@ AllCops:
   - Rakefile
   - 'test/**/*'
   - 'lib/plugins/*/test/**/*'
-  - 'examples/**/*'
+  # This is delicate; we want to include examples/plugins/*/lib
+  # but not anything else.
+  - 'examples/*profile*/**/*'
+  - 'examples/kitchen*/**/*'
+  - 'examples/inheritance/**/*'
+  - 'examples/custom-resource/**/*'
+  - 'examples/plugins/*/test/**/*'
   - 'vendor/**/*'
   - 'lib/bundles/inspec-init/templates/**/*'
   - 'www/demo/**/*'
