--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,15 @@ skip_commits:
   # version bumps by Expeditor happen as a separate commit after the merge, we can skip
   author: Chef Expeditor
   # if ONLY the files listed below are changed in a commit, skip
-  files:
-    - '*.md'
-    - docs/**/*
-    - examples/**/*
-    - MAINTAINERS.toml
+  #
+  # Update jq: Currently this does not as expected and is blocking any builds that have any
+  # files matching the paths below.
+  #
+  # files:
+  #   - '*.md'
+  #   - docs/**/*
+  #   - examples/**/*
+  #   - MAINTAINERS.toml
 
 skip_tags: true
 branches:
