Adding inspec init profile for GCP. (#3484)
* Adding inspec init profile for GCP.
* Adding final newline, thanks rubocop.
* Ensure README headings are at the same level.
* Move OS-specific default profile to new location
* Enforce os-platform restriction on default profile template
* Use profile templates in subdirs.
* Updates to address PR feedback after rebasing from #3491.
* Alter test setup to properly use YAML

Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/lib/plugins/inspec-init/lib/inspec-init/templates/profiles/os/inspec.yml
+++ b/lib/plugins/inspec-init/lib/inspec-init/templates/profiles/os/inspec.yml
@@ -6,3 +6,5 @@ copyright_email: you@example.com
 license: Apache-2.0
 summary: An InSpec Compliance Profile
 version: 0.1.0
+supports:
+  platform: os
