--- a/omnibus/Gemfile
+++ b/omnibus/Gemfile
@@ -11,8 +11,8 @@ source 'https://rubygems.org'
 # gem 'omnibus-software', github: 'chef/omnibus-software', branch: 'ksubrama/ruby23'
 
 # Use entries from chef's Gemfile
-gem 'omnibus', github: 'chef/omnibus'
-gem 'omnibus-software', github: 'chef/omnibus-software'
+gem 'omnibus', git: 'https://github.com/chef/omnibus', branch: 'master'
+gem 'omnibus-software', git: 'https://github.com/chef/omnibus-software', branch: 'master'
 
 # This development group is installed by default when you run `bundle install`,
 # but if you are using Omnibus in a CI-based infrastructure, you do not need
@@ -20,10 +20,10 @@ gem 'omnibus-software', github: 'chef/omnibus-software'
 # by running `bundle install --without development` to speed up build times.
 group :development do
   # Use Berkshelf for resolving cookbook dependencies
-  gem 'berkshelf', '~> 4.3'
+  gem 'berkshelf', '>= 7.0'
 
   # Use Test Kitchen with Vagrant for converging the build environment
-  gem 'kitchen-vagrant', '~> 0.19'
-  gem 'test-kitchen',    '~> 1.9'
-  gem 'winrm-fs', '~> 0.4'
+  gem 'kitchen-vagrant', '~> 1.3.1'
+  gem 'test-kitchen',    '~> 1.21'
+  gem 'winrm-fs', '~> 1.0'
 end
