--- a/omnibus/kitchen.yml
+++ b/omnibus/kitchen.yml
@@ -11,7 +11,6 @@ driver:
 
 provisioner:
   name: chef_zero
-  require_chef_omnibus: true
   attributes:
     vagrant:
       this_key_exists_so_we_have_a_vagrant_key: true
@@ -22,41 +21,47 @@ provisioner:
       install_dir:         /opt/inspec
 
 platforms:
-  - name: centos-7.2
+  - name: centos-6
     run_list: yum-epel::default
-  - name: centos-6.7
+  - name: centos-7
     run_list: yum-epel::default
-  - name: debian-8.2
+  - name: debian-8
     run_list: apt::default
-  - name: debian-7.9
+  - name: debian-9
     run_list: apt::default
   - name: ubuntu-14.04
     run_list: apt::default
-  - name: ubuntu-12.04
+  - name: ubuntu-16.04
     run_list: apt::default
-  # The following (private) boxes are shared via Atlas and are only
+  - name: ubuntu-18.04
+    run_list: apt::default
+  # The following (private) boxes are shared via Vagrant Cloud and are only
   # available to users working for Chef. Sorry, it's about software licensing.
   #
   # Chef-internal users, you will need to:
-  # 1.  Create an Atlas account:  https://atlas.hashicorp.com/
-  # 2.  Ping #eng-services-support with your Atlas account name
-  #     to be added to the relevant team in Atlas,
-  # 3.  Do `vagrant login` with your Atlas creds so that you can download
-  #     the private boxes.
+  # 1.  Create an Vagrant Cloud account:  http://vagrantcloud.com/
+  # 2.  Ping #releng-support with your account name to be added to the relevant team.
+  # 3.  Do `vagrant login` with your creds so that you can download the private boxes.
   #
-  # The Mac OS X boxes are VMware only also. You can enable VMware Fusion
-  # by activating the `.kitchen.vmware.yml` file with the `KITCHEN_LOCAL_YAML`
+  # The macOS boxes are VMware only also. You can enable VMware Fusion
+  # by activating the `kitchen.vmware.yml` file with the `KITCHEN_LOCAL_YAML`
   # environment variable:
   #
-  #   KITCHEN_LOCAL_YAML=.kitchen.vmware.yml kitchen converge inspec-macosx-109
+  #   KITCHEN_LOCAL_YAML=kitchen.vmware.yml kitchen converge chef-macosx-1011
   #
+
+  # OSX
   <% %w(
-    10.9
-    10.10
-    10.11
+    macosx-10.11
+    macos-10.12
+    macos-10.13
   ).each do |mac_version| %>
-  - name: macosx-<%= mac_version %>
+  - name: <%= mac_version %>
     driver:
+      provider: vmware_fusion
+      customize:
+        numvcpus: 4
+        memsize: 4096
       box: chef/macosx-<%= mac_version %> # private
       synced_folders:
       - ['..', '/Users/vagrant/chef']
