--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -67,6 +67,7 @@ subscriptions:
   - workload: artifact_published:current:inspec:*
     actions:
       - built_in:tag_docker_image
+      - built_in:promote_habitat_packages
   - workload: artifact_published:stable:inspec:*
     actions:
       - bash:.expeditor/update_dockerfile.sh
@@ -74,4 +75,5 @@ subscriptions:
       - built_in:publish_rubygems
       - built_in:create_github_release
       - built_in:tag_docker_image
+      - built_in:promote_habitat_packages
       - built_in:notify_chefio_slack_channels
