--- a/test/unit/mock/profiles/license-proprietary/inspec.yml
+++ b/test/unit/mock/profiles/license-proprietary/inspec.yml
@@ -3,6 +3,6 @@ title: InSpec Profile
 maintainer: The Authors
 copyright: The Authors
 copyright_email: you@example.com
-license: Apache-2.0
+license: Proprietary, All rights reserved
 summary: An InSpec Compliance Profile
 version: 0.1.0
