--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,12 @@ os: Windows Server 2012 R2
 platform:
   - x64
 
+
+# Use this to preseve the build VM after the build finishes
+# https://www.appveyor.com/docs/how-to/rdp-to-build-worker/
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 environment:
   matrix:
     - name: unit-tests-ruby-2.3.3
