Add the 2.x branch to expeditor
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -28,6 +28,8 @@ github:
         version_constraint: 3.*
     - 1-stable:
         version_constraint: 1.*
+    - 2-stable:
+        version_constraint: 2.*
 
 changelog:
   categories:
