Replace most mentions of attribute with input in test/
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/test/unit/mock/profiles/inputs/basic/inspec.yml
+++ b/test/unit/mock/profiles/inputs/basic/inspec.yml
@@ -1,7 +1,7 @@
-name: attributes
+name: inputs
 version: 1.0.0
 maintainer: inspec@chef.io
-title: Attributes
+title: Inputs
 license: Apache-2.0
 supports:
   - linux
