Note the correct expeditor URL in the config comment
Point to the new docs page.

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -1,4 +1,5 @@
-# Documentation available at http://expeditor-docs.es.chef.io/
+# Documentation available at https://expeditor.chef.io/docs/getting-started/
+---
 
 product_key: inspec
 
