--- a/kitchen.yml
+++ b/kitchen.yml
@@ -22,30 +22,60 @@ verifier:
     verifier_attribute: 'Attribute Override!'
 
 platforms:
-- name: ubuntu-12.04
+- name: amazonlinux
   driver:
-    image: ubuntu:12.04
-- name: ubuntu-14.04
+    image: dokken/amazonlinux
+    pid_one_command: /sbin/init
+
+- name: amazonlinux-2
   driver:
-    image: ubuntu:14.04
-- name: ubuntu-16.04
+    image: dokken/amazonlinux-2
+    pid_one_command: /usr/lib/systemd/systemd
+
+- name: debian-8
   driver:
-    image: ubuntu:16.04
-    intermediate_instructions:
-    - RUN /usr/bin/apt-get update
+    image: dokken/debian-8
     pid_one_command: /bin/systemd
-- name: centos-6.6
-  driver:
-    image: centos:6.6
-- name: centos-6.8
-  driver:
-    image: centos:6.8
     intermediate_instructions:
-      - RUN yum install -y initscripts
+      - RUN /usr/bin/apt-get update
+
+- name: debian-9
+  driver:
+    image: dokken/debian-9
+    pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN /usr/bin/apt-get update
+
+- name: centos-6
+  driver:
+    image: dokken/centos-6
+    pid_one_command: /sbin/init
+
 - name: centos-7
   driver:
-    image: centos:7
+    image: dokken/centos-7
     pid_one_command: /usr/lib/systemd/systemd
+
+- name: ubuntu-14.04
+  driver:
+    image: dokken/ubuntu-14.04
+    pid_one_command: /sbin/init
+    intermediate_instructions:
+      - RUN /usr/bin/apt-get update
+
+- name: ubuntu-16.04
+  driver:
+    image: dokken/ubuntu-16.04
+    pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN /usr/bin/apt-get update
+
+- name: ubuntu-18.04
+  driver:
+    image: dokken/ubuntu-18.04
+    pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN /usr/bin/apt-get update
 - name: oracle-6.7
   driver:
     image: oraclelinux:6.7
@@ -53,21 +83,6 @@ platforms:
   driver:
     image: oraclelinux:7.2
     pid_one_command: /usr/lib/systemd/systemd
-- name: debian-7
-  driver:
-    image: debian:7.11
-    intermediate_instructions:
-    - RUN /usr/bin/apt-get update
-    # running it within the chef recipe is too late :-(
-    - RUN /usr/bin/apt-get install -y procps lsb-release
-- name: debian-8
-  driver:
-    image: debian:8.5
-    intermediate_instructions:
-    - RUN /usr/bin/apt-get update
-    # running it within the chef recipe is too late :-(
-    - RUN /usr/bin/apt-get install -y procps lsb-release
-    pid_one_command: /bin/systemd
 - name: fedora-23
   driver:
     image: fedora:23
