--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-sudo: required
 branches:
   only:
     - master
 language: ruby
 cache: bundler
-dist: trusty
+dist: xenial
 services:
 - docker
 bundler_args: "--without integration tools maintenance deploy"
@@ -17,6 +16,7 @@ matrix:
   - rvm: 2.3.8
   - rvm: 2.4.5
   - rvm: 2.5.3
+  - rvm: 2.6.1
   - rvm: 2.4.5
     script: bundle exec rake $SUITE
     env: SUITE="test:functional"
