--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ cache: bundler
 dist: xenial
 services:
 - docker
-bundler_args: "--without integration tools maintenance deploy"
 before_install:
 - gem update --system
 - gem --version
@@ -14,9 +13,13 @@ before_install:
 matrix:
   include:
   - rvm: 2.3.8
+    bundler_args: "--without integration tools maintenance deploy"
   - rvm: 2.4.5
+    bundler_args: "--without integration tools maintenance deploy"
   - rvm: 2.5.3
+    bundler_args: "--without integration tools maintenance deploy"
   #- rvm: 2.6.1 # this needs a few fixes to get enabled
+  #  bundler_args: "--without integration tools maintenance deploy"
   - rvm: 2.4.5
     script: bundle exec rake $SUITE
     env: SUITE="test:functional"
@@ -51,7 +54,11 @@ matrix:
   - rvm: 2.5.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
-    env: SUITE=test:integration[default-oracle-72]
+    env: SUITE=test:integration[default-oraclelinux-6]
+  - rvm: 2.5.3
+    script: bundle exec rake $SUITE
+    bundler_args: "--without tools maintenance deploy"
+    env: SUITE=test:integration[default-oraclelinux-7]
   - rvm: 2.5.3
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
