Work around strange bundler failures on Ruby 2.3
We should be excluding the integration group but it's trying to install berkshelf no matter what. :shrug:

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache: bundler
 dist: xenial
 services:
 - docker
+bundler_args: "--without integration tools maintenance deploy"
 before_install:
 - gem update --system
 - gem --version
@@ -13,18 +14,18 @@ before_install:
 matrix:
   include:
   - rvm: 2.3.8
-    bundler_args: "--without integration tools maintenance deploy"
-    env: UNIT_23=1
+    env: UNIT_TESTS_23=1
   - rvm: 2.4.5
-    bundler_args: "--without integration tools maintenance deploy"
-    env: UNIT_24=1
+    env: UNIT_TESTS_24=1
   - rvm: 2.5.3
-    bundler_args: "--without integration tools maintenance deploy"
-    env: UNIT_25=1
+    env: UNIT_TESTS_25=1
   #- rvm: 2.6.1 # this needs a few fixes to get enabled
   #  bundler_args: "--without integration tools maintenance deploy"
-  #  env: LINT_AND_TEST_26: 1
+  #  env: UNIT_TESTS_26=1
   - rvm: 2.4.5
+    script: bundle exec rake $SUITE
+    env: SUITE="test:functional"
+  - rvm: 2.5.3
     script: bundle exec rake $SUITE
     env: SUITE="test:functional"
   - rvm: 2.5.3
