Add v4 to release list
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -31,6 +31,8 @@ github:
         version_constraint: 1.*
     - 2-stable:
         version_constraint: 2.*
+    - 4-stable:
+        version_constraint: 4.*
 
 changelog:
   categories:
