--- a/lib/plugins/inspec-init/templates/profiles/aws/inspec.yml
+++ b/lib/plugins/inspec-init/templates/profiles/aws/inspec.yml
@@ -6,11 +6,15 @@ copyright_email: you@example.com
 license: Apache-2.0
 summary: An InSpec Compliance Profile For AWS
 version: 0.1.0
-inspec_version: '>= 2.3.5'
+inspec_version: '~> 4'
 attributes:
 - name: aws_vpc_id
-  required: true
-  description: 'The Custom AWS VPC Id'
+  required: false
+  default: ''
+  description: 'Optional Custom AWS VPC Id'
   type: string
+depends:
+  - name: inspec-aws
+    url: https://github.com/inspec/inspec-aws/archive/master.tar.gz
 supports:
-- platform: aws
+  - platform: aws
