--- a/lib/plugins/inspec-init/templates/profiles/aws/inspec.yml
+++ b/lib/plugins/inspec-init/templates/profiles/aws/inspec.yml
@@ -10,6 +10,8 @@ inspec_version: '~> 4'
 attributes:
 - name: aws_vpc_id
   required: false
+  # Below is deliberately left as a default empty string to allow the profile to run when this is not provided.
+  # Please see the README for more details.
   default: ''
   description: 'Optional Custom AWS VPC Id'
   type: string
