One less -y, please
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -104,7 +104,7 @@ suites:
   - recipe[audit]
   verifier:
     inspec_tests:
-      - test/integration/default -y
+      - test/integration/default
   attributes:
     audit:
       attributes:
