Add inspec-habitat to list of resource packs
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/contrib/contrib.yaml
+++ b/contrib/contrib.yaml
@@ -15,3 +15,8 @@ resource_packs:
     git_repo: https://github.com/inspec/inspec-azure.git
     doc_group_title: Azure
     resource_file_regex: ^azure
+
+  inspec-habitat:
+    git_repo: https://github.com/inspec/inspec-habitat.git
+    doc_group_title: Habitat
+    resource_file_regex: ^habitat_
