--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,6 @@ os: Windows Server 2012 R2
 platform:
   - x64
 
-
 # Use this to preseve the build VM after the build finishes.
 # Note that the appveyor builds will appear to hang; check the build log for details.
 # https://www.appveyor.com/docs/how-to/rdp-to-build-worker/
@@ -13,8 +12,10 @@ environment:
   matrix:
     - name: unit-tests-ruby-2.4.4
       ruby_version: "24"
-    - name: unit-tests-ruby-2.5.1
+    - name: unit-tests-ruby-2.5
       ruby_version: "25"
+    - name: unit-tests-ruby-2.6
+      ruby_version: "26"
     - name: functional-tests-1
       ruby_version: "25"
     - name: functional-tests-2
@@ -42,6 +43,7 @@ skip_tags: true
 branches:
   only:
     - master
+    - 3-stable
 
 cache:
   - vendor/bundle -> appveyor.yml
