Helper script to check for typos in deprecation group names
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ terraform.tfstate.backup
 inspec-azure.plan
 inspec-aws-*.plan
 contrib/*
+inspec-deprecations-in-cfg.txt
+inspec-deprecations-in-lib.txt
