Disable Performance/RegexpMatch rule to avoid breaking soooo many tests
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -55,6 +55,8 @@ Metrics/PerceivedComplexity:
   Max: 11
 NumericLiterals:
   MinDigits: 10
+Performance/RegexpMatch:
+  Enabled: false
 Security/YAMLLoad:
   Enabled: false
 Style/AndOr:
