Habitat should install inspec-bin and activate inspec from that
Signed-off-by: tyler-ball <tball@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -6,6 +6,8 @@ product_key: inspec
 rubygems:
  - inspec
  - inspec-core
+ - inspec-bin:
+     gemspec_path: ./inspec-bin/
 
 docker_images:
   - inspec:
