More omnibus def updates from Chef
Getting the file path right should fix the build failures

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/omnibus/.gitignore
+++ b/omnibus/.gitignore
@@ -2,11 +2,11 @@
 .bundle
 .cache/*
 .kitchen/
-.kitchen.local.yml
 vendor/bundle
 pkg/*
-.vagrant
+kitchen.local.yml
 bin/*
 files/**/cache/
 vendor/cookbooks
 Berksfile.lock
+Gemfile.local
