--- a/omnibus/Gemfile
+++ b/omnibus/Gemfile
@@ -14,6 +14,12 @@ group :development do
 
   # Use Test Kitchen with Vagrant for converging the build environment
   gem 'kitchen-vagrant', '>= 1.3.1'
-  gem 'test-kitchen',    '>= 1.21'
+  gem 'test-kitchen', '>= 1.23'
   gem 'winrm-fs', '~> 1.0'
 end
+
+instance_eval(ENV['GEMFILE_MOD']) if ENV['GEMFILE_MOD']
+
+# If you want to load debugging tools into the bundle exec sandbox,
+# add these additional dependencies into Gemfile.local
+eval_gemfile(__FILE__ + '.local') if File.exist?(__FILE__ + '.local')
