--- a/kitchen.vagrant.yml
+++ b/kitchen.vagrant.yml
@@ -18,6 +18,7 @@ platforms:
   - name: fedora-29
   - name: freebsd-11
   - name: opensuseleap-42
+  - name: opensuseleap-15
   - name: ubuntu-16.04
   - name: ubuntu-18.04
 
