Add Debian 10 testing to Kitchen / Travis
Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,10 @@ matrix:
   - rvm: 2.5.5
     script: bundle exec rake $SUITE
     bundler_args: "--without tools maintenance deploy"
+    env: SUITE=test:integration[default-debian-10]  
+  - rvm: 2.5.5
+    script: bundle exec rake $SUITE
+    bundler_args: "--without tools maintenance deploy"
     env: SUITE=test:integration[default-oraclelinux-6]
   - rvm: 2.5.5
     script: bundle exec rake $SUITE
