--- a/kitchen.yml
+++ b/kitchen.yml
@@ -56,6 +56,13 @@ platforms:
     intermediate_instructions:
       - RUN /usr/bin/apt-get update -y
 
+- name: debian-10
+  driver:
+    image: dokken/debian-10
+    pid_one_command: /bin/systemd
+    intermediate_instructions:
+      - RUN /usr/bin/apt-get update -y
+
 - name: fedora-29
   driver:
     image: dokken/fedora-29
