Build the InSpec gem directly in Kitchen so we can run locally
Before you had to kick off kitchen via Rake as the Rake task build the local gem we injected into the cookbook. Now we do it within Test Kitchen using a feature that didn't exist when this was all written. Also --output is your friend and greatly reduces the complexity of all this.

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/kitchen.chef.yml
+++ b/kitchen.chef.yml
@@ -9,6 +9,10 @@ verifier:
   name: inspec
   sudo: true
 
+lifecycle:
+  pre_converge:
+    - local: gem build inspec-core.gemspec --output test/cookbooks/os_prepare/files/inspec-core-local.gem
+
 platforms:
 # The following (private) boxes are shared via VagrantCloud and are only
 # available to users working for Chef. Sorry, it's about software licensing.
