--- a/kitchen.vagrant.yml
+++ b/kitchen.vagrant.yml
@@ -9,6 +9,10 @@ verifier:
   name: inspec
   sudo: true
 
+lifecycle:
+  pre_converge:
+    - local: gem build inspec-core.gemspec --output test/cookbooks/os_prepare/files/inspec-core-local.gem
+
 platforms:
   - name: centos-6
   - name: centos-7
