Mac OS X -> macOS
Make Apple happy

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/kitchen.chef.yml
+++ b/kitchen.chef.yml
@@ -24,7 +24,7 @@ platforms:
 # 3.  Do `vagrant login` with your VagrantCloud creds so that you can download
 #     the private boxes.
 #
-# The Mac OS X boxes are VMware only also. You can enable VMware Fusion
+# The macOS boxes are VMware only also. You can enable VMware Fusion
 # by activating the `.kitchen.vmware.yml` file with the `KITCHEN_LOCAL_YAML`
 # environment variable:
 #
@@ -34,7 +34,7 @@ platforms:
   10.11
   10.12
 ).each do |mac_version| %>
-- name: macosx-<%= mac_version %>
+- name: macos-<%= mac_version %>
   driver:
     box: chef/macosx-<%= mac_version %> # private
     synced_folders:
