Don't use ERB where it isn't necessary
No need for this array

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/kitchen.chef.yml
+++ b/kitchen.chef.yml
@@ -61,11 +61,9 @@ platforms:
   driver:
     box: chef/solaris-11.3
 
-<% [ '11-sp2-x86_64' ].each do |sles_version| %>
 - name: sles-<%= sles_version %>
   driver:
-    box: chef/sles-<%= sles_version %>
-<% end %>
+    box: chef/sles-11-sp2-x86_64
 
 suites:
   - name: default
