Fix the box name for the macos boxes as well
The new boxes follow Apple's brand changes

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/kitchen.chef.yml
+++ b/kitchen.chef.yml
@@ -36,7 +36,7 @@ platforms:
 ).each do |mac_version| %>
 - name: macos-<%= mac_version %>
   driver:
-    box: chef/macosx-<%= mac_version %> # private
+    box: chef/macos-<%= mac_version %> # private
     synced_folders:
     - ['..', '/Users/vagrant/chef']
     - ['../../omnibus', '/Users/vagrant/omnibus']
