--- a/kitchen/rake-tests/Gemfile
+++ b/kitchen/rake-tests/Gemfile
@@ -1,4 +1,4 @@
-source "https://www.rubygems.org"
+source 'https://www.rubygems.org'
 
-gem "test-kitchen"
-gem "kitchen-docker"
+gem 'kitchen-docker'
+gem 'test-kitchen'
