Must define the env at top level or it won't join matrix.
Also enable fast finish so we don't wait on allowed fails before
returning build status.

Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,9 @@ before_install:
 - bundle --version
 env:
   - SLOW=1
+  - CI_ENABLE_COVERAGE=true
 matrix:
+  fast_finish: true
   include:
   - rvm: 2.6.3
   - rvm: 2.5.5
