Cache the .rvm directory in travis
Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ branches:
     - master
     - 3-stable
 language: ruby
-cache: bundler
+cache:
+  - bundler
+  directories:
+    - /home/travis/.rvm
 dist: xenial
 services:
 - docker
