Exclude more bundled controls
Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,6 @@ AllCops:
     - 'test/integration/**/controls/**/*.rb'
     - 'test/unit/mock/profiles/**/*.rb'
     - 'test/unit/mock/config_dirs/**/*.rb'
+    - 'lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/**/*'
+    - 'examples/**/controls/*.rb'
+    - 'vendor/bundle/**/*'
