Add maintainer branches to travis.
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ branches:
   only:
     - master
     - 3-stable
+    - /cw.*/
+    - /mj.*/
+    - /zenspider.*/
 language: ruby
 cache:
   - bundler
