Enable Windows 2019 packages
Signed-off-by: Jaymala Sinha <jsinha@chef.io>

--- a/.expeditor/release.omnibus.yml
+++ b/.expeditor/release.omnibus.yml
@@ -28,3 +28,4 @@ builder-to-testers-map:
     - windows-2012-x86_64
     - windows-2012r2-x86_64
     - windows-2016-x86_64
+    - windows-2019-x86_64
