Add a retry to expeditor defaults, per shain's advice.
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -3,6 +3,9 @@ expeditor:
   defaults:
     buildkite:
       timeout_in_minutes: 45
+    retry:
+      automatic:
+        limit: 1
       
 steps:
 
