Build omnibus and habitat packages only if version was bumped
Signed-off-by: Jeremiah Snapp <jeremiah@chef.io>

--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -111,11 +111,18 @@ merge_actions:
     ignore_labels:
      - "Changelog: Skip Update"
      - "Expeditor: Skip All"
+ - trigger_pipeline:omnibus/adhoc:
+    not_if: built_in:bump_version
+    ignore_labels:
+     - "Omnibus: Skip Build"
+     - "Expeditor: Skip All"
  - trigger_pipeline:omnibus/release:
+    only_if: built_in:bump_version
     ignore_labels:
      - "Omnibus: Skip Build"
      - "Expeditor: Skip All"
  - trigger_pipeline:habitat/build:
+    only_if: built_in:bump_version
     ignore_labels:
      - "Habitat: Skip Build"
      - "Expeditor: Skip All"
