Added new pipeline to check all tests work in isolation.
Signed-off-by: Ryan Davis <zenspider@chef.io>

--- a/.expeditor/verify.pipeline.yml
+++ b/.expeditor/verify.pipeline.yml
@@ -33,6 +33,14 @@ steps:
       docker:
         image: ruby:2.6-stretch
 
+- label: isolated-tests-ruby-2.6
+  command:
+    - RAKE_TASK=test:isolated /workdir/.expeditor/buildkite/verify.sh
+  expeditor:
+    executor:
+      docker:
+        image: ruby:2.6-stretch
+
 - label: run-tests-ruby-2.6-windows
   command:
     - /workdir/.expeditor/buildkite/verify.ps1
