Edits and adding to website menu
Signed-off-by: Mary Jinglewski <mjinglewski@chef.io>

--- a/www/data/docs_sidebar.yml
+++ b/www/data/docs_sidebar.yml
@@ -46,3 +46,5 @@ sidebar_links:
     link: "/docs/reference/habitat.html"
   - title: Migration from Serverspec
     link: "/docs/reference/migration.html"
+  - title: Waivers (beta)
+    link: "/docs/reference/waivers.html"
